fix tailwind config imports

--- a/stories/Colors.stories.mdx
+++ b/stories/Colors.stories.mdx
@@ -1,7 +1,7 @@
 import { theme } from "../tailwind.config.js";
 import { Meta } from "@storybook/addon-docs";
-import resolveConfig from "tailwindcss/lib/util/resolveConfig";
-import defaultConfig from "tailwindcss/stubs/defaultConfig.stub";
+import defaultConfig from "tailwindcss/defaultConfig";
+import resolveConfig from "tailwindcss/resolveConfig";
 
 <Meta title="Framework/Colors" />
 
