--- a/stories/Colors.stories.mdx
+++ b/stories/Colors.stories.mdx
@@ -1,38 +1,24 @@
 import { theme } from "../tailwind.config.js";
-import { Meta } from "@storybook/addon-docs";
+import { Meta, ColorPalette, ColorItem } from "@storybook/addon-docs";
 import defaultConfig from "tailwindcss/defaultConfig";
 import resolveConfig from "tailwindcss/resolveConfig";
+
+export const colors = resolveConfig([theme, defaultConfig])[0].colors;
 
 <Meta title="Framework/Colors" />
 
 # Colors
 
-<div>
-  {Object.entries(resolveConfig([theme, defaultConfig]).colors)
+<ColorPalette>
+  {Object.entries(colors)
     .filter(([key, value]) => !["current", "transparent"].includes(key))
-    .map(([key, value]) => (
-      <div className="mb-4" key={key}>
-        <h2 style={{ border: 0, fontSize: 16 }}>{key}</h2>
-        <div className="flex flex-wrap gap-1 pb-8 bg-white pt-4">
-          {typeof value === "string" ? (
-            <div
-              onClick={() => navigator.clipboard.writeText(value)}
-              style={{ backgroundColor: value }}
-              className="p-2 rounded-full border border-neutral-500 border-opacity-10 shadow-inner w-24 h-24 flex items-center justify-center"
-            ></div>
-          ) : (
-            Object.entries(value).map(([key, value]) => (
-              <div
-                key={value}
-                onClick={() => navigator.clipboard.writeText(value)}
-                style={{ backgroundColor: value }}
-                className="p-2 rounded-full border border-neutral-500 border-opacity-10 shadow-inner w-24 h-24 flex items-center justify-center"
-              >
-                {key}
-              </div>
-            ))
-          )}
-        </div>
-      </div>
-    ))}
-</div>
+    .map(([key, value]) => {
+      return (
+        <ColorItem
+          title={key}
+          subtitle={typeof value === "string" ? value : ""}
+          colors={typeof value === "string" ? { [key]: value } : value}
+        />
+      );
+    })}
+</ColorPalette>
