--- a/stories/Typography.stories.mdx
+++ b/stories/Typography.stories.mdx
@@ -1,57 +1,38 @@
 import { theme } from "../tailwind.config.js";
-import { Meta } from "@storybook/addon-docs";
+import { Meta, Typeset } from "@storybook/addon-docs";
 import defaultConfig from "tailwindcss/defaultConfig";
 import resolveConfig from "tailwindcss/resolveConfig";
+
+export const tailwindConfig = resolveConfig([theme, defaultConfig])[0];
+export const fontSizes = Object.entries(tailwindConfig.fontSize)
+  .map(([key, value]) => {
+    value = Array.isArray(value) ? value[0] : value;
+    return Number(value.replace(/rem|px|em/, "") * 16);
+  })
+  .sort((a, b) => a - b)
+  .filter((value) => Boolean(value))
+  .filter((value, index, array) => array.indexOf(value) === index);
 
 <Meta title="Framework/Typography" />
 
 # Typography
 
-<style>
-  {`    
-.size {
-  display: block;
-  font-style: normal !important;
-  font-weight: normal !important;
-  color: #333;
-  margin-bottom: 6px !important;
-}
-
-.text-preview {
-  padding: 0 !important;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  width: 100%;
-  white-space: nowrap;
-  font-family: Circular, Georgia;
-}
-`}
-</style>
-
-<div style={{ marginBottom: 100 }}>
-  {Object.entries(resolveConfig([theme, defaultConfig]).fontSize)
-    .filter(([key, value]) => key !== "0")
-    .map(([key, value]) => {
-      console.log(key, value);
-      return (
-        <dl key={key} style={{ marginBottom: 40 }}>
-          <dt className="size">
-            {key} - {value}
-          </dt>
-          {[400, 500, 600, 700].map((fontWeight) => (
-            <dd
-              key={fontWeight}
-              className="text-preview"
-              style={{
-                fontSize: Array.isArray(value) ? value[0] : value,
-                lineHeight: Array.isArray(value) ? value[1] : 1,
-                fontWeight,
-              }}
-            >
-              The quick brown fox jumped over the lazy dog.
-            </dd>
-          ))}
-        </dl>
-      );
-    })}
+<div>
+  {Object.entries(tailwindConfig.fontFamily).map(([fontName, fontValue]) =>
+    Object.entries(tailwindConfig.fontWeight).map(
+      ([weightName, weightValue]) => (
+        <div key={fontName + weightName}>
+          <h2>
+            {fontValue[0]} {weightName}
+          </h2>
+          <Typeset
+            fontSizes={fontSizes}
+            fontWeight={weightValue}
+            sampleText="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+            fontFamily={fontValue}
+          />
+        </div>
+      ),
+    ),
+  )}
 </div>
