--- a/stories/Typography.stories.mdx
+++ b/stories/Typography.stories.mdx
@@ -1,9 +1,7 @@
-import theme from "../_theme";
+import customTheme from "../_theme";
 import { Meta, Typeset } from "@storybook/addon-docs";
-import defaultConfig from "tailwindcss/defaultConfig";
-import resolveConfig from "tailwindcss/resolveConfig";
 
-export const fontSizes = Object.entries(theme.fontSizes)
+export const fontSize = Object.entries(customTheme.theme.fontSize)
   .map(([key, value]) => {
     value = Array.isArray(value) ? value[0] : value;
     if (typeof value === "number") {
@@ -26,19 +24,21 @@ export const fontSizes = Object.entries(theme.fontSizes)
 # Typography
 
 <div>
-  {Object.entries(theme.fonts).map(([fontName, fontValue]) =>
-    Object.entries(theme.fontWeights).map(([weightName, weightValue]) => (
-      <div key={fontName + weightName}>
-        <h2>
-          {fontValue[0]} {weightName}
-        </h2>
-        <Typeset
-          fontSizes={fontSizes}
-          fontWeight={weightValue}
-          sampleText="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
-          fontFamily={fontValue}
-        />
-      </div>
-    )),
+  {Object.entries(customTheme.theme.fontFamily).map(([fontName, fontValue]) =>
+    Object.entries(customTheme.theme.fontWeight).map(
+      ([weightName, weightValue]) => (
+        <div key={fontName + weightName}>
+          <h2>
+            {fontValue[0]} {weightName}
+          </h2>
+          <Typeset
+            fontSizes={fontSize}
+            fontWeight={weightValue}
+            sampleText="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+            fontFamily={fontValue}
+          />
+        </div>
+      ),
+    ),
   )}
 </div>
